# StyleTransfer

./: .gitignore  import-summary.txt
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/jinxlabs/stylizedfilters/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: image_stitching.cpp
app/src/main/cpp/utils/: CMakeLists.txt  time_profiler.cpp
app/src/main/cpp/utils/include/: time_profiler.h
app/src/main/java/jinxlabs/stylizedfilters/: AutoFitTextureView.java  Camera2BasicFragment.java  CameraActivity.java  ImageInfo.java  StylizeActivity.java
app/src/main/java/jinxlabs/stylizedfilters/utils/: ImageUtils.java  Logger.java
app/src/main/res/layout/: activity_stylize.xml  fragment_camera2_basic.xml
app/src/main/res/values/: strings.xml
app/src/test/java/jinxlabs/stylizedfilters/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
